--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,14 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags')
     steps:
+      - name: Extract Version
+        id: version_step
+        run: |
+          echo "##[set-output name=version;]VERSION=${GITHUB_REF#$"refs/tags/v"}"
+          echo "##[set-output name=version_tag;]maodou38/freenom-auto-renew:${GITHUB_REF#$"refs/tags/v"}"
+          echo "##[set-output name=latest_tag;]maodou38/freenom-auto-renew:latest"
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -24,6 +31,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - 
+        name: PrepareReg Names
+        id: read-docker-image-identifiers
+        run: |
+          echo VERSION_TAG=$(echo ${{ steps.version_step.outputs.version_tag }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo LASTEST_TAG=$(echo ${{ steps.version_step.outputs.latest_tag  }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       -
         name: Build and push
         id: docker_build
@@ -33,7 +46,9 @@ jobs:
           file: ./Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
-          tags: maodou38/freenom-auto-renew:latest
+          tags: |
+             ${{env.VERSION_TAG}}
+             ${{env.LASTEST_TAG}}
       -
         name: Update repo description
         uses: peter-evans/dockerhub-description@v2
